Fri Jan  1 03:26:44 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/ostruct.rb (freeze): define deferred accessors before
	  freezing to get rid of an error when just reading frozen
	  OpenStruct.

Thu Dec 31 14:36:45 2015  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/ostruct.rb: Fix new_ostruct_member to correctly avoid
	  redefinition [#11901]

Thu Dec 31 02:45:12 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/ruby/test_module.rb (test_classpath): r53376 may change
	  the order of m.constants.
	  `make TESTS='-v ruby/test_class.rb ruby/test_module.rb' test-all`
	  may fail after that.
	  http://rubyci.s3.amazonaws.com/tk2-243-31075/ruby-trunk/log/20151230T164202Z.log.html.gz

Thu Dec 31 02:20:00 2015  Benoit Daloze  <eregontp@gmail.com>

	* common.mk (help): Fix typo.

Wed Dec 30 20:53:09 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/net/http/responses.rb: Added new response class for 451 status code.
	* lib/net/http.rb: documentation for HTTPUnavailableForLegalReasons

Wed Dec 30 20:45:45 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/webrick/httpstatus.rb: Added HTTP 451 Status Code.
	  [fix GH-1167] Patch by @MuhammetDilmac
	  https://tools.ietf.org/html/draft-tbray-http-legally-restricted-status-00

Wed Dec 30 20:25:52 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* doc/syntax/calling_methods.rdoc: fix old operator for safe navigation
	  operator. [ci skip][fix GH-1182] Patch by @dougo

Wed Dec 30 16:43:23 2015  Kuniaki IGARASHI  <igaiga@gmail.com>

	* test/ruby/test_string.rb (test_ord): Add test for String#ord.
	  [Fix GH-1181]

Wed Dec 30 11:28:57 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/forwardable.rb (def_instance_delegator): adjust backtrace of
	  method body by tail call optimization.  adjusting the delegated
	  target is still done by deleting backtrace.

	* lib/forwardable.rb (def_single_delegator): ditto.

Wed Dec 30 11:18:42 2015  Elliot Winkler  <elliot.winkler@gmail.com>
